footer contrast and font fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ body {
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-size: 13pt;
 	color: #333;
 }
 a {
@@ -44,7 +44,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #footer {
   background-color: #444;
-  color: #aaa;
+  color: white;
   font-size: 11pt;
   letter-spacing: 1px;
   padding: 25px;
@@ -90,11 +90,13 @@ nav h1 a {
     padding: 8px;
     color: black;
     content: "/\00a0";
+    font-size: 12pt;
 }
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
     color: #0275d8;
+    font-size: 12pt;
     text-decoration: none;
 }
 
@@ -224,7 +226,7 @@ nav h1 a {
   max-width:100%;
 }
 #restaurant-name {
-  color: #f18200;
+  color: #a05509;
   font-family: Arial,sans-serif;
   font-size: 20pt;
   font-weight: 200;
@@ -284,11 +286,12 @@ nav h1 a {
   border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
-  margin: 0 0 30px;
+  margin: 0 0 5%;
   overflow: hidden;
   padding: 0 20px 20px;
   position: relative;
-  width: 90%;
+  width: 95%;
+  border-radius: 10px;
 }
 #reviews-list li p {
 /*  margin: 0 0 10px;*/
@@ -347,6 +350,10 @@ nav h1 a {
 @media all and (max-width: 956px) {
   #restaurants-list li {
     width: 100vw;
+  }
+  #reviews-list li {
+    width: 90%;
+  }
 }
 
 
